# exploring_graphics_programming

./: Cargo.toml  README.md
src/: main.rs
src/guassian_elimination/: back_substitution.wgsl  elimination.wgsl  model.rs  shader.wgsl
src/wgpu_helpers/: helpers.rs
