[package]
name = "exploring_graphics_programming"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "exploring_graphics_programming"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.27"
rand = "0.9.0"
wgpu = "24.0.3"
